centered margin, issue: total not showing

--- a/Global_Cuisine_Project/src/Pages/Home.css
+++ b/Global_Cuisine_Project/src/Pages/Home.css
@@ -6,3 +6,7 @@
 .loadBtn {
     align-self: center;
 }
+
+.searchResultContainer p {
+    align-self: center;
+}
